<resources>
    <string name="app_name">My Application Curso</string>

    <string name="item_inicio">Inicio</string>
    <string name="item_chats">Chats</string>
    <string name="item_vender">Vender</string>
    <string name="item_mis_anuncios">Mis anuncios</string>
    <string name="item_cuenta">Cuenta</string>

    <string name="tituloRL">Titulo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Ingresar_email">Ingresar con Email</string>
    <string name="Ingresar_google">Ingresar con Google</string>

    <string name="txt_login">Login de Usuario</string>
    <string name="et_Email">Email</string>
    <string name="et_Contraseña">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="txt_Registrar">Registrarme</string>

    <string name="txt_registro">Registro de usuario</string>
    <string name="et_r_password">Repetir Contraseña</string>
    <string name="btn_registrar">Registrar</string>


    <!-- Perfil de usuario -->
    <string name="txt_perfil">Perfin de Usuario</string>
    <string name="txt_informacion">Informacion: </string>
    <string name="txt_nombres">Nombres</string>
    <string name="tv_nombres">Nombres Completos</string>
    <string name="txt_email">Email</string>
    <string name="tv_email">email@dominio.com</string>
    <string name="txt_fechNac">Fecha de nac...</string>
    <string name="tv_nacimiento">dd/mm/aaaa</string>
    <string name="txt_miembro">Miembro desde</string>
    <string name="tv_miembro">dd/mm/aaaa</string>
    <string name="txt_telefono">Telefono</string>
    <string name="tv_telefono">000-000-000</string>
    <string name="txt_estadocuenta">Estado de Cuenta</string>
    <string name="tv_estadocuenta">No verificado</string>
    <string name="btn_cerrarSesion">Cerrar Sesión</string>
    <string name="txt_opciones">Opciones</string>
    <string name="btn_editarPerfil">Editar Perfil</string>






</resources>